fix: image dist

--- a/index.html
+++ b/index.html
@@ -14,63 +14,63 @@
     <nav class="header__nav">
       <div class="menu--mobile" onClick="menuButton()">
         <h3>Menu</h3>
-        <img class="down-icon" src="/src/images/icons/down-icon.png" alt="Visualizar Menu">
+        <img class="down-icon" src="./dist/images/icons/down-icon.png" alt="Visualizar Menu">
       </div>
       <div id="menu">
         <div>
-          <img src="./src/images/icons/home-icon.png" alt="Início">
+          <img src="./dist/images/icons/home-icon.png" alt="Início">
           <p>Início</p>
         </div>
         <div>
-          <img src="./src/images/icons/bag-icon.png" alt="Loja">
+          <img src="./dist/images/icons/bag-icon.png" alt="Loja">
           <p>Loja</p>
         </div>
         <div>
-          <img src="./src/images/icons/tv-icon.png" alt="TV ao vivo">
+          <img src="./dist/images/icons/tv-icon.png" alt="TV ao vivo">
           <p>TV ao vivo</p>
         </div>
         <div>
-          <img src="./src/images/icons/categorias-icon.png" alt="Categorias">
+          <img src="./dist/images/icons/categorias-icon.png" alt="Categorias">
           <p>Categorias</p>
-          <img class="menu--down--icon" src="./src/images/icons/down-icon.png" alt="Visualizar">
+          <img class="menu--down--icon" src="./dist/images/icons/down-icon.png" alt="Visualizar">
         </div>
       </div>
-      <img class="prime-logo" src="/src/images/logo-prime.png" alt="Prime Video">
+      <img class="prime-logo" src="./dist/images/logo-prime.png" alt="Prime Video">
       <div class="header__nav__options">
         <div>
           <h3>Início</h3>
-          <img class="down-icon" src="/src/images/icons/down-icon.png" alt="Visualizar Início">
+          <img class="down-icon" src="./dist/images/icons/down-icon.png" alt="Visualizar Início">
         </div>
         <div>
           <h3>Loja</h3>
-          <img class="down-icon" src="/src/images/icons/down-icon.png" alt="Visualizar Loja">
+          <img class="down-icon" src="./dist/images/icons/down-icon.png" alt="Visualizar Loja">
         </div>
         <div>
           <h3>TV ao vivo</h3>
         </div>
         <div>
           <h3>Categorias</h3>
-          <img class="down-icon" src="/src/images/icons/down-icon.png" alt="Visualizar Categorias">
+          <img class="down-icon" src="./dist/images/icons/down-icon.png" alt="Visualizar Categorias">
         </div>
       </div>
       <div class="header__nav__user">
         <div>
-          <img class="search-icon" src="/src/images/icons/pesquisar-icon.png" alt="Pesquisar">
+          <img class="search-icon" src="./dist/images/icons/pesquisar-icon.png" alt="Pesquisar">
         </div>
         <div class="user--option">
           <h3>Experimente grátis</h3>
         </div>
         <div class="user--option">
           <h3>PT</h3>
-          <img class="down-icon" src="/src/images/icons/down-icon.png" alt="Alterar Idioma">
+          <img class="down-icon" src="./dist/images/icons/down-icon.png" alt="Alterar Idioma">
         </div>
         <div>
-          <img class="user-icon" src="/src/images/icons/usuario-icon.png" alt="Usuário">
+          <img class="user-icon" src="./dist/images/icons/usuario-icon.png" alt="Usuário">
         </div>
         <div id="user">
           <div>
             <p>Experimente grátis</p>
-            <span>PT <img class="menu--down--icon" src="./src/images/icons/down-icon.png" alt="Alterar idioma"></span>
+            <span>PT <img class="menu--down--icon" src="./dist/images/icons/down-icon.png" alt="Alterar idioma"></span>
             <p>Fazer login</p>
             <p>Ajuda</p>
             <p>Assista onde quiser</p>
@@ -81,7 +81,7 @@
   </header>
   <section class="movie">
     <div class="movie__logo">
-      <img src="/src/images/prime-logo.png" alt="Prime">
+      <img src="./dist/images/prime-logo.png" alt="Prime">
     </div>
     <div class="movie__title">
       <p class="text--size">Vencedor do OSCAR®</p>
@@ -106,7 +106,7 @@
     </div>
     <div class="movie__options">
       <div class="movie__options__test">
-        <img src="/src/images/icons/verificado-icon.png" alt="Incluído no Prime Video">
+        <img src="./dist/images/icons/verificado-icon.png" alt="Incluído no Prime Video">
         <p>Assista com um teste gratuíto do Prime</p>
       </div>
       <div class="movie__options__actions">
@@ -129,19 +129,19 @@
         </div>
         <div class="movie__options__actions__reactions">
           <button>
-            <img src="/src/images/icons/trailer-icon100.png" alt="Assistir trailer">
+            <img src="./dist/images/icons/trailer-icon100.png" alt="Assistir trailer">
           </button>
           <button>
-            <img src="/src/images/icons/adicionar-icon100.png" alt="Adicionar a lista">
+            <img src="./dist/images/icons/adicionar-icon100.png" alt="Adicionar a lista">
           </button>
           <button>
-            <img src="/src/images/icons/like-icon.png" alt="Tenho interesse">
+            <img src="./dist/images/icons/like-icon.png" alt="Tenho interesse">
           </button>
           <button>
-            <img src="/src/images/icons/dislike-icon.png" alt="Não tenho interesse">
+            <img src="./dist/images/icons/dislike-icon.png" alt="Não tenho interesse">
           </button>
           <button>
-            <img src="/src/images/icons/compartilhar-icon100.png" alt="Compartilhar">
+            <img src="./dist/images/icons/compartilhar-icon100.png" alt="Compartilhar">
           </button>
         </div>
       </div>
@@ -153,7 +153,7 @@
   </section>
   <section class="mobile">
     <div class="mobile__logo">
-      <img src="/src/images/prime-logo.png" alt="Prime">
+      <img src="./dist/images/prime-logo.png" alt="Prime">
     </div>
     <div class="mobile__title">
       <p class="text--size">Vencedor do OSCAR®</p>
@@ -161,7 +161,7 @@
     </div>
     <div class="mobile__options">
       <div class="mobile__options__test">
-        <img src="/src/images/icons/verificado-icon.png" alt="Incluído no Prime Video">
+        <img src="./dist/images/icons/verificado-icon.png" alt="Incluído no Prime Video">
         <p>Assista com um teste gratuíto do Prime</p>
       </div>
       <div class="mobile__options__actions">
@@ -182,23 +182,23 @@
         </div>
         <div class="mobile__options__actions__reactions">
           <span>
-            <img src="/src/images/icons/trailer-icon100.png" alt="Assistir trailer">
+            <img src="./dist/images/icons/trailer-icon100.png" alt="Assistir trailer">
             <p>Trailer</p>
           </span>
           <span>
-            <img src="/src/images/icons/adicionar-icon100.png" alt="Adicionar a lista">
+            <img src="./dist/images/icons/adicionar-icon100.png" alt="Adicionar a lista">
             <p>Lista</p>
           </span>
           <span>
-            <img src="/src/images/icons/like-icon.png" alt="Tenho interesse">
+            <img src="./dist/images/icons/like-icon.png" alt="Tenho interesse">
             <p>Curtir</p>
           </span>
           <span>
-            <img src="/src/images/icons/dislike-icon.png" alt="Não tenho interesse">
+            <img src="./dist/images/icons/dislike-icon.png" alt="Não tenho interesse">
             <p>Não tenho interesse</p>
           </span>
           <span>
-            <img src="/src/images/icons/compartilhar-icon100.png" alt="Compartilhar">
+            <img src="./dist/images/icons/compartilhar-icon100.png" alt="Compartilhar">
             <p>Compartilhar</p>
           </span>
         </div>
